# pudato

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-edit-format.py
.github/workflows/: ci.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml  pudato.duckdb
dbt/models/marts/: dept_budget_summary.sql  schema.yml
dbt/models/staging/: schema.yml  stg_departments.sql  stg_expenditures.sql
dbt/seeds/: raw_departments.csv  raw_expenditures.csv
docs/: architecture.md  handlers.md  messaging.md  schema.md
scripts/: setup-local.sh
src/pudato/: __init__.py  config.py
src/pudato/backends/: __init__.py  catalog.py  dbt.py  dbt_manifest.py  logic_repo.py  query.py  registry.py  storage.py  table.py
src/pudato/handlers/: __init__.py  base.py  catalog.py  query.py  registry.py  storage.py  table.py  transform.py
src/pudato/messaging/: __init__.py  consumer.py  publisher.py  topics.py
src/pudato/protocol/: __init__.py  errors.py  messages.py
src/pudato/runtime/: __init__.py  lambda_handler.py  local_runner.py  results_consumer.py
src/pudato/utils/: __init__.py
terraform/: README.md
terraform/environments/local/: main.tf  outputs.tf  variables.tf
terraform/modules/messaging/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py
tests/integration/: test_catalog_handler.py  test_end_to_end.py  test_handler_lineage.py  test_logic_repo.py  test_messaging.py  test_postgres_registry.py  test_query_handler.py  test_registry_handler.py  test_results_consumer.py  test_storage_handler.py  test_table_handler.py  test_transform_handler.py
tests/unit/: test_protocol.py
