[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pudato"
version = "0.1.0"
description = "Public Data Operations Platform - A modular, open-source platform for data operations with public sector data"
readme = "README.md"
license = "MIT"
# Python 3.11 pinned for compatibility with dbt-core, Airflow, and Great Expectations.
# All three tools support 3.10-3.13 as of Dec 2025, but 3.11 is the most stable common ground.
# TODO(Feb 2026): Recheck if Python 3.12+ or 3.14 support has improved across the ecosystem.
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Pudato Contributors" }
]
keywords = ["data-platform", "etl", "public-sector", "aws", "serverless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "pyiceberg>=0.6",
    "duckdb>=1.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
airflow = ["apache-airflow>=2.8"]
dbt = ["dbt-core>=1.7", "dbt-duckdb>=1.7"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto>=5.0",
    "localstack-client>=2.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "boto3-stubs[sns,sqs,s3,lambda]>=1.34",
    "psycopg[binary]>=3.1",
]
all = ["pudato[airflow,dbt,postgres,dev]"]

[project.urls]
Homepage = "https://github.com/pudato/pudato"
Documentation = "https://github.com/pudato/pudato#readme"
Repository = "https://github.com/pudato/pudato"

[tool.hatch.build.targets.wheel]
packages = ["src/pudato"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["pudato"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "moto.*",
    "localstack_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require LocalStack)",
    "slow: marks tests as slow",
]
